--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -3,10 +3,13 @@
 		\textbf{Abstract}\vspace{12mm}
 	\end{Huge}
 \\
-Recently, a novel high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract spatial information from the X-ray fluorescence of a sample \cite{classen2017}.
+Recently, a promising high-resolution imaging method termed \textit{Incoherent Diffractive Imaging} (IDI) has been proposed: By utilizing the ultra-short and intense pulses provided by an X-ray Free Electron Laser (FEL) for excitation,  intensity correlations as commonly used in stellar interferometry can extract three dimensional spatial information with from the X-ray fluorescence of a sample.  
+IDI could allow nanoscale resolution in three dimensions from few orientations, and thereby dramatically increase the range of applications for ultrashort X-ray FEL pulses \cite{classen2017}.  
 In the only experimental implementation thus far, metal foils were used as the sample, allowing the measurement of the size of the focal spot of the FEL (>100\,nm) \cite{nakumura2020}.
+In this work, major steps towards realizing the spatial resolution potential of the method by imaging smaller structures such as iron nanoparticles and 3d imaging of single crystals are made: 
 
-In this work, steps toward imaging smaller structures such as iron nanoparticles and 3d imaging of single crystals are made: A simulation framework is presented, providing insights into the dependence of signal and noise on experimental parameters. These are used to design samples and choose the setup for a feasible experiment at the SACLA FEL facility. The implemented analysis of the data includes careful preprocessing and the first application of Kossel line based orientation determination to IDI to overcome experimental limitations before averaging the correlations of many thousand images. The results of the previously reported imaging of the focus could be reproduced. 
+A simulation-guided experiment performed at the SACLA FEL facility is presented, utilizing new experimental techniques as well as data processing steps to overcome some of the limitations of IDI. Among others, he first application of Kossel line based orientation determination to IDI 
+The results of the previously reported imaging of the focus could be reproduced. 
 Even though the goal of increasing the resolution could not yet be achieved, this work provides a basis for upcoming experiments.
 
  \vspace{1cm}
