--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1050,7 +1050,7 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
 }
 
 @Article{collaboration2014,
-  author    = {collaboration, The ATLAS},
+  author    = {{The ATLAS collaboration}},
   journal   = {Journal of Instrumentation},
   title     = {A neural network clustering algorithm for the ATLAS silicon pixel detector},
   year      = {2014},
@@ -1485,6 +1485,16 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   issue     = {13},
   numpages  = {4},
   publisher = {American Physical Society},
+}
+
+@Book{van2001,
+  author    = {Van Grieken, R. and Markowicz, A.},
+  publisher = {CRC Press},
+  title     = {{Handbook of X-Ray Spectrometry}},
+  year      = {2001},
+  isbn      = {9780203908709},
+  series    = {Practical Spectroscopy},
+  lccn      = {2001055348},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
